tests/NormalTests/paczka1/fuzzy1/49055450.err
Error in line 2: 1kobaJGKO A173 70,9
Error in line 1: 9GUO4ktbT S888 47,7
Error in line 5: 9GUO4ktbT S456 25,9
Error in line 13: 9GUO4ktbT A978 82,7
Error in line 19: 9GUO4ktbT S888 18,8
Error in line 10: NrZYron1dh4 A173 9,3
Error in line 7: eomJIh S888 11,8
Error in line 23: NrZYron1dh4 S456 65,9
Error in line 22: nE5i6bfT A978 38,0
Error in line 35: eomJIh A978 94,99
Error in line 30: SR1PFiHWfG A173 6,9
